--- a/ZunigaSnapchat/Base.lproj/Main.storyboard
+++ b/ZunigaSnapchat/Base.lproj/Main.storyboard
@@ -148,6 +148,31 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zcs-8D-VHg">
+                                <rect key="frame" x="108.5" y="714" width="197" height="32"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="google.png">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="  ">
+                                            <attributes>
+                                                <font key="NSFont" size="12" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                        <fragment content="Iniciar Sesión con Google">
+                                            <attributes>
+                                                <font key="NSFont" size="12" name="Helvetica-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="iniciarSesionGoogleTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T0O-8h-LPK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -161,9 +186,11 @@
                             <constraint firstItem="Wvz-V0-bdx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Hn3-jD-dwO"/>
                             <constraint firstItem="sDP-Mi-VCI" firstAttribute="top" secondItem="aFr-O0-CIv" secondAttribute="bottom" constant="25" id="KRo-z7-mcN"/>
                             <constraint firstItem="iz5-7q-VDA" firstAttribute="centerX" secondItem="0Bq-Vb-LUo" secondAttribute="centerX" id="LJx-Cy-iib"/>
+                            <constraint firstItem="sCL-da-uQa" firstAttribute="centerX" secondItem="Zcs-8D-VHg" secondAttribute="centerX" id="M3R-Ew-IxH"/>
                             <constraint firstItem="Wvz-V0-bdx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OPC-V8-O1E"/>
                             <constraint firstItem="iz5-7q-VDA" firstAttribute="top" secondItem="0yX-f0-3hz" secondAttribute="bottom" constant="25" id="Rj1-d0-VpC"/>
                             <constraint firstItem="0yX-f0-3hz" firstAttribute="centerX" secondItem="iz5-7q-VDA" secondAttribute="centerX" id="SO2-Wy-ln8"/>
+                            <constraint firstItem="Zcs-8D-VHg" firstAttribute="top" secondItem="sCL-da-uQa" secondAttribute="bottom" constant="25" id="Xg6-VA-c35"/>
                             <constraint firstItem="sCL-da-uQa" firstAttribute="top" secondItem="R2o-8y-YRQ" secondAttribute="bottom" constant="25" id="b8p-1E-BW8"/>
                             <constraint firstItem="0Bq-Vb-LUo" firstAttribute="top" secondItem="iz5-7q-VDA" secondAttribute="bottom" constant="25" id="dsr-HV-O2T"/>
                             <constraint firstItem="R2o-8y-YRQ" firstAttribute="centerX" secondItem="sCL-da-uQa" secondAttribute="centerX" id="etj-fI-PGs"/>
@@ -186,6 +213,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="google.png" width="18" height="18"/>
         <image name="login" width="512" height="512"/>
         <image name="phone" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
@@ -193,6 +221,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
